--- a/index.html
+++ b/index.html
@@ -1,45 +1,329 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Real Push Notification</title>
+  <meta charset="UTF-8" />
+  <title>Simple Chat (Firebase DB only)</title>
+  <style>
+    body { font-family: Arial, sans-serif; max-width: 480px; margin: 2em auto; }
+    input, select, button { font-size: 1rem; margin: 0.3em 0; padding: 0.5em; width: 100%; }
+    #chat { border: 1px solid #ccc; height: 300px; overflow-y: auto; padding: 1em; margin-top: 1em; }
+    .msg { margin: 0.5em 0; }
+    .from-me { text-align: right; color: green; }
+    .from-other { text-align: left; color: blue; }
+    #loginDiv, #chatDiv { display: none; }
+
+body {
+  font-family: Arial, sans-serif;
+  max-width: 480px;
+  margin: 2em auto;
+  background: #f9f9f9;
+  color: #333;
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 1em;
+}
+
+input, select, button {
+  font-size: 1rem;
+  margin: 0.3em 0;
+  padding: 0.5em;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  transition: border-color 0.3s ease;
+}
+
+input:focus, select:focus, button:focus {
+  border-color: #4a76a8;
+  outline: none;
+}
+
+button {
+  background-color: #4a76a8;
+  color: white;
+  font-weight: 600;
+  cursor: pointer;
+  border: none;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #3b5a7a;
+}
+
+#chat {
+  border: 1px solid #ccc;
+  background: white;
+  height: 300px;
+  overflow-y: auto;
+  padding: 1em;
+  margin-top: 1em;
+  border-radius: 8px;
+  box-shadow: inset 0 0 5px rgba(0,0,0,0.05);
+}
+
+.msg {
+  margin: 0.5em 0;
+  max-width: 70%;
+  padding: 0.5em 0.75em;
+  border-radius: 15px;
+  word-wrap: break-word;
+  font-size: 0.95rem;
+  line-height: 1.3;
+  user-select: text;
+}
+
+.from-me {
+  margin-left: auto;
+  background-color: #dcf8c6;
+  border-bottom-right-radius: 0;
+  text-align: right;
+}
+
+.from-other {
+  margin-right: auto;
+  background-color: white;
+  border-bottom-left-radius: 0;
+  box-shadow: 0 1px 1.5px rgba(0,0,0,0.1);
+  text-align: left;
+}
+
+#msgInput {
+  margin-top: 1em;
+}
+
+#logoutBtn {
+  background-color: #e74c3c;
+  border: none;
+  color: white;
+  font-weight: 600;
+  padding: 0.3em 0.6em;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#logoutBtn:hover {
+  background-color: #c0392b;
+}
+
+p {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0.5em 0;
+  font-weight: 600;
+}
+
+  </style>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
 </head>
 <body>
-  <h1>Enable Push Notifications</h1>
-  <button onclick="subscribe()">Subscribe</button>
 
-  <script>
-    // Register service worker
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js').then(reg => {
-        console.log('Service Worker registered', reg);
-      });
-    }
+<h2>Simple Firebase Chat</h2>
 
-    async function subscribe() {
-      const permission = await Notification.requestPermission();
-      if (permission !== 'granted') {
-        alert("Notifications not allowed.");
-        return;
+<div id="loginDiv">
+  <h3>Login or Sign Up</h3>
+  <input id="emailInput" placeholder="Email" type="email" />
+  <input id="passwordInput" placeholder="Password" type="password" />
+  <button id="signupBtn">Sign Up</button>
+  <button id="loginBtn">Log In</button>
+  <div id="loginMsg" style="color:red;"></div>
+</div>
+
+<div id="chatDiv">
+  <p>Logged in as <span id="currentUserEmail"></span> <button id="logoutBtn">Log out</button></p>
+  <select id="userSelect"><option value="">Select user to chat</option></select>
+  <div id="chat"></div>
+  <input id="msgInput" placeholder="Type message..." />
+  <button id="sendBtn">Send</button>
+</div>
+
+<script>
+  // Your Firebase config here (only databaseURL needed)
+  const firebaseConfig = {
+    databaseURL: "https://fb-acc-d2f14-default-rtdb.asia-southeast1.firebasedatabase.app"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.database();
+
+  // DOM elements
+  const loginDiv = document.getElementById('loginDiv');
+  const chatDiv = document.getElementById('chatDiv');
+  const emailInput = document.getElementById('emailInput');
+  const passwordInput = document.getElementById('passwordInput');
+  const signupBtn = document.getElementById('signupBtn');
+  const loginBtn = document.getElementById('loginBtn');
+  const loginMsg = document.getElementById('loginMsg');
+  const currentUserEmailSpan = document.getElementById('currentUserEmail');
+  const logoutBtn = document.getElementById('logoutBtn');
+  const userSelect = document.getElementById('userSelect');
+  const chatBox = document.getElementById('chat');
+  const msgInput = document.getElementById('msgInput');
+  const sendBtn = document.getElementById('sendBtn');
+
+  let currentUser = null; // {uid, email}
+  let selectedUser = null;
+  let chatListener = null;
+
+  // Generate simple UID from email (hash or base64)
+  function generateUid(email) {
+    return btoa(email).replace(/=/g,'');
+  }
+
+  // Show login, hide chat
+  function showLogin() {
+    loginDiv.style.display = 'block';
+    chatDiv.style.display = 'none';
+  }
+  // Show chat, hide login
+  function showChat() {
+    loginDiv.style.display = 'none';
+    chatDiv.style.display = 'block';
+  }
+
+  // Save user in DB
+  function saveUser(email, password) {
+    const uid = generateUid(email);
+    return db.ref('users/' + uid).get().then(snapshot => {
+      if(snapshot.exists()) {
+        return Promise.reject('User already exists');
       }
+      // Store plain password (NOT secure! For demo only)
+      return db.ref('users/' + uid).set({ email, password });
+    });
+  }
 
-      const reg = await navigator.serviceWorker.ready;
+  // Check login
+  function checkLogin(email, password) {
+    const uid = generateUid(email);
+    return db.ref('users/' + uid).get().then(snapshot => {
+      if(!snapshot.exists()) return Promise.reject('User not found');
+      const userData = snapshot.val();
+      if(userData.password !== password) return Promise.reject('Incorrect password');
+      return { uid, email };
+    });
+  }
 
-      const subscription = await reg.pushManager.subscribe({
-        userVisibleOnly: true,
-        applicationServerKey: '<YOUR_VAPID_PUBLIC_KEY>' // replace with your key
-      });
-
-      // Send subscription to your server
-      await fetch('/subscribe', {
-        method: 'POST',
-        body: JSON.stringify(subscription),
-        headers: {
-          'Content-Type': 'application/json'
+  // Load all users except current user
+  function loadUsers() {
+    db.ref('users').get().then(snapshot => {
+      userSelect.innerHTML = '<option value="">Select user to chat</option>';
+      snapshot.forEach(child => {
+        if(child.key !== currentUser.uid) {
+          userSelect.innerHTML += `<option value="${child.key}">${child.val().email}</option>`;
         }
       });
+    });
+  }
 
-      alert("Subscribed to push!");
+  // Listen to messages with selected user
+  function listenMessages() {
+    if(chatListener) chatListener.off();
+    chatBox.innerHTML = '';
+    if(!selectedUser) return;
+    const ref = db.ref(`messages/${currentUser.uid}/${selectedUser}`);
+    chatListener = ref;
+    ref.on('child_added', snap => {
+      const m = snap.val();
+      const div = document.createElement('div');
+      div.className = m.from === currentUser.uid ? 'msg from-me' : 'msg from-other';
+      div.textContent = m.text;
+      chatBox.appendChild(div);
+      chatBox.scrollTop = chatBox.scrollHeight;
+      // Notify if from other user
+      if(m.from !== currentUser.uid && Notification.permission === 'granted') {
+        new Notification('New message from ' + m.from, { body: m.text });
+      }
+    });
+  }
+
+  // Send message
+  function sendMessage() {
+    if(!selectedUser) {
+      alert('Select user to chat with');
+      return;
     }
-  </script>
+    const text = msgInput.value.trim();
+    if(!text) return;
+    const msgObj = {
+      from: currentUser.uid,
+      to: selectedUser,
+      text,
+      timestamp: Date.now()
+    };
+    const userMsgRef = db.ref(`messages/${currentUser.uid}/${selectedUser}`).push();
+    userMsgRef.set(msgObj);
+    db.ref(`messages/${selectedUser}/${currentUser.uid}/${userMsgRef.key}`).set(msgObj);
+    msgInput.value = '';
+  }
+
+  // Login and Signup handlers
+  signupBtn.onclick = () => {
+    loginMsg.textContent = '';
+    const email = emailInput.value.trim();
+    const password = passwordInput.value;
+    if(!email || !password) {
+      loginMsg.textContent = 'Enter email & password';
+      return;
+    }
+    saveUser(email, password)
+      .then(() => {
+        alert('Signup successful! You can now log in.');
+      })
+      .catch(err => {
+        loginMsg.textContent = err;
+      });
+  };
+
+  loginBtn.onclick = () => {
+    loginMsg.textContent = '';
+    const email = emailInput.value.trim();
+    const password = passwordInput.value;
+    if(!email || !password) {
+      loginMsg.textContent = 'Enter email & password';
+      return;
+    }
+    checkLogin(email, password)
+      .then(user => {
+        currentUser = user;
+        currentUserEmailSpan.textContent = user.email;
+        showChat();
+        loadUsers();
+      })
+      .catch(err => {
+        loginMsg.textContent = err;
+      });
+  };
+
+  logoutBtn.onclick = () => {
+    currentUser = null;
+    selectedUser = null;
+    userSelect.value = '';
+    chatBox.innerHTML = '';
+    showLogin();
+  };
+
+  userSelect.onchange = () => {
+    selectedUser = userSelect.value;
+    listenMessages();
+  };
+
+  sendBtn.onclick = sendMessage;
+
+  // Notifications permission request
+  if('Notification' in window && Notification.permission !== 'granted') {
+    Notification.requestPermission();
+  }
+
+  // Start with login screen
+  showLogin();
+
+</script>
+
 </body>
 </html>
