--- a/index.html
+++ b/index.html
@@ -1,102 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Simple Chat with Top Notification</title>
+  <meta charset="UTF-8">
+  <title>Chat App with Top Notification</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 480px;
+      max-width: 500px;
       margin: 2em auto;
-      background: #f9f9f9;
-      color: #333;
+      background: #f4f4f4;
+      padding: 1em;
     }
+
     h2 {
       text-align: center;
-      margin-bottom: 1em;
     }
+
     input, select, button {
-      font-size: 1rem;
-      margin: 0.3em 0;
-      padding: 0.5em;
       width: 100%;
-      border: 1px solid #ccc;
+      margin: 0.3em 0;
+      padding: 0.6em;
+      font-size: 1rem;
       border-radius: 5px;
-      box-sizing: border-box;
-      transition: border-color 0.3s ease;
+      border: 1px solid #ccc;
     }
-    input:focus, select:focus, button:focus {
-      border-color: #4a76a8;
-      outline: none;
-    }
+
     button {
-      background-color: #4a76a8;
+      background: #4a76a8;
       color: white;
-      font-weight: 600;
+      font-weight: bold;
       cursor: pointer;
       border: none;
-      transition: background-color 0.3s ease;
     }
-    button:hover {
-      background-color: #3b5a7a;
-    }
+
     #chat {
+      height: 250px;
       border: 1px solid #ccc;
-      background: white;
-      height: 300px;
-      overflow-y: auto;
-      padding: 1em;
-      margin-top: 1em;
-      border-radius: 8px;
-      box-shadow: inset 0 0 5px rgba(0,0,0,0.05);
-    }
-    .msg {
-      margin: 0.5em 0;
-      max-width: 70%;
-      padding: 0.5em 0.75em;
-      border-radius: 15px;
-      word-wrap: break-word;
-      font-size: 0.95rem;
-      line-height: 1.3;
-      user-select: text;
-    }
-    .from-me {
-      margin-left: auto;
-      background-color: #dcf8c6;
-      border-bottom-right-radius: 0;
-      text-align: right;
-    }
-    .from-other {
-      margin-right: auto;
-      background-color: white;
-      border-bottom-left-radius: 0;
-      box-shadow: 0 1px 1.5px rgba(0,0,0,0.1);
-      text-align: left;
-    }
-    #msgInput {
-      margin-top: 1em;
-    }
-    #logoutBtn {
-      background-color: #e74c3c;
-      border: none;
-      color: white;
-      font-weight: 600;
-      padding: 0.3em 0.6em;
       border-radius: 5px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
+      overflow-y: auto;
+      padding: 10px;
+      background: white;
+      margin-top: 1em;
     }
-    #logoutBtn:hover {
-      background-color: #c0392b;
+
+    .msg {
+      padding: 5px 10px;
+      margin: 6px 0;
+      border-radius: 10px;
+      max-width: 75%;
     }
-    p {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin: 0.5em 0;
-      font-weight: 600;
+
+    .from-me {
+      background: #dcf8c6;
+      align-self: flex-end;
+      text-align: right;
+      margin-left: auto;
     }
-    #newMessageNotification {
+
+    .from-other {
+      background: #fff;
+      align-self: flex-start;
+      text-align: left;
+      margin-right: auto;
+      border: 1px solid #eee;
+    }
+
+    #chatDiv {
+      display: none;
+    }
+
+    #notification {
       position: fixed;
       top: 10px;
       left: 50%;
@@ -105,15 +78,12 @@
       color: white;
       padding: 12px 20px;
       border-radius: 25px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      font-weight: 600;
-      font-size: 1rem;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       display: none;
       z-index: 9999;
-      max-width: 90%;
+      font-size: 1rem;
       text-align: center;
-      pointer-events: none;
-      user-select: none;
+      max-width: 90%;
     }
   </style>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
@@ -121,200 +91,171 @@
 </head>
 <body>
 
-<h2>Simple Chat with Top Notification</h2>
+<h2>Simple Chat</h2>
+
+<div id="notification"></div>
 
 <div id="loginDiv">
-  <h3>Login or Sign Up</h3>
-  <input id="emailInput" placeholder="Email" type="email" autocomplete="username"/>
-  <input id="passwordInput" placeholder="Password" type="password" autocomplete="current-password"/>
-  <button id="signupBtn">Sign Up</button>
-  <button id="loginBtn">Log In</button>
-  <div id="loginMsg" style="color:red; min-height:1.5em;"></div>
+  <h3>Login / Sign Up</h3>
+  <input id="emailInput" placeholder="Email" type="email">
+  <input id="passwordInput" placeholder="Password" type="password">
+  <button onclick="signup()">Sign Up</button>
+  <button onclick="login()">Log In</button>
+  <div id="loginMsg" style="color:red; min-height: 1.2em;"></div>
 </div>
 
-<div id="chatDiv" style="display:none;">
-  <p>Logged in as <span id="currentUserEmail"></span> <button id="logoutBtn">Log out</button></p>
-  <select id="userSelect"><option value="">Select user to chat</option></select>
+<div id="chatDiv">
+  <p>
+    Logged in as <span id="currentUserEmail"></span>
+    <button onclick="logout()" style="float:right;background:#e74c3c;">Logout</button>
+  </p>
+  <select id="userSelect">
+    <option value="">Select a user</option>
+  </select>
   <div id="chat"></div>
-  <input id="msgInput" placeholder="Type message..." autocomplete="off" />
-  <button id="sendBtn">Send</button>
+  <input id="msgInput" placeholder="Type a message...">
+  <button onclick="sendMessage()">Send</button>
 </div>
-
-<div id="newMessageNotification"></div>
 
 <script>
+  // Firebase config
   const firebaseConfig = {
     databaseURL: "https://fb-acc-d2f14-default-rtdb.asia-southeast1.firebasedatabase.app"
   };
   firebase.initializeApp(firebaseConfig);
   const db = firebase.database();
 
-  const loginDiv = document.getElementById('loginDiv');
-  const chatDiv = document.getElementById('chatDiv');
+  let currentUser = null;
+  let selectedUser = null;
+  let chatRef = null;
+
   const emailInput = document.getElementById('emailInput');
   const passwordInput = document.getElementById('passwordInput');
-  const signupBtn = document.getElementById('signupBtn');
-  const loginBtn = document.getElementById('loginBtn');
   const loginMsg = document.getElementById('loginMsg');
-  const currentUserEmailSpan = document.getElementById('currentUserEmail');
-  const logoutBtn = document.getElementById('logoutBtn');
   const userSelect = document.getElementById('userSelect');
+  const currentUserEmail = document.getElementById('currentUserEmail');
   const chatBox = document.getElementById('chat');
   const msgInput = document.getElementById('msgInput');
-  const sendBtn = document.getElementById('sendBtn');
-  const newMessageNotification = document.getElementById('newMessageNotification');
+  const notification = document.getElementById('notification');
 
-  let currentUser = null; // {uid, email}
-  let selectedUser = null;
-  let chatListener = null;
-
-  function generateUid(email) {
-    return btoa(email).replace(/=/g,'');
+  function showNotification(message) {
+    notification.textContent = message;
+    notification.style.display = 'block';
+    clearTimeout(notification.timer);
+    notification.timer = setTimeout(() => {
+      notification.style.display = 'none';
+    }, 4000);
   }
 
-  function showLogin() {
-    loginDiv.style.display = 'block';
-    chatDiv.style.display = 'none';
-  }
-  function showChat() {
-    loginDiv.style.display = 'none';
-    chatDiv.style.display = 'block';
+  function uid(email) {
+    return btoa(email).replace(/=/g, '');
   }
 
-  function saveUser(email, password) {
-    const uid = generateUid(email);
-    return db.ref('users/' + uid).get().then(snapshot => {
-      if(snapshot.exists()) {
-        return Promise.reject('User already exists');
+  function signup() {
+    const email = emailInput.value.trim();
+    const password = passwordInput.value.trim();
+    if (!email || !password) {
+      loginMsg.textContent = "Please fill in both fields.";
+      return;
+    }
+    const userId = uid(email);
+    db.ref('users/' + userId).once('value').then(snapshot => {
+      if (snapshot.exists()) {
+        loginMsg.textContent = "User already exists. Try logging in.";
+      } else {
+        db.ref('users/' + userId).set({ email, password });
+        loginMsg.textContent = "Account created. Now log in.";
       }
-      return db.ref('users/' + uid).set({ email, password });
     });
   }
 
-  function checkLogin(email, password) {
-    const uid = generateUid(email);
-    return db.ref('users/' + uid).get().then(snapshot => {
-      if(!snapshot.exists()) return Promise.reject('User not found');
-      const userData = snapshot.val();
-      if(userData.password !== password) return Promise.reject('Incorrect password');
-      return { uid, email };
+  function login() {
+    const email = emailInput.value.trim();
+    const password = passwordInput.value.trim();
+    const userId = uid(email);
+    db.ref('users/' + userId).once('value').then(snapshot => {
+      const user = snapshot.val();
+      if (!user) {
+        loginMsg.textContent = "User not found.";
+      } else if (user.password !== password) {
+        loginMsg.textContent = "Incorrect password.";
+      } else {
+        currentUser = { uid: userId, email };
+        currentUserEmail.textContent = email;
+        document.getElementById('loginDiv').style.display = 'none';
+        document.getElementById('chatDiv').style.display = 'block';
+        loadUsers();
+      }
     });
+  }
+
+  function logout() {
+    currentUser = null;
+    selectedUser = null;
+    chatBox.innerHTML = '';
+    document.getElementById('loginDiv').style.display = 'block';
+    document.getElementById('chatDiv').style.display = 'none';
+    if (chatRef) chatRef.off();
   }
 
   function loadUsers() {
-    db.ref('users').get().then(snapshot => {
-      userSelect.innerHTML = '<option value="">Select user to chat</option>';
+    userSelect.innerHTML = '<option value="">Select a user</option>';
+    db.ref('users').once('value').then(snapshot => {
       snapshot.forEach(child => {
-        if(child.key !== currentUser.uid) {
-          userSelect.innerHTML += `<option value="${child.key}">${child.val().email}</option>`;
+        if (child.key !== currentUser.uid) {
+          const opt = document.createElement('option');
+          opt.value = child.key;
+          opt.textContent = child.val().email;
+          userSelect.appendChild(opt);
         }
       });
     });
   }
 
-  function listenMessages() {
-    if(chatListener) chatListener.off();
+  userSelect.addEventListener('change', () => {
+    selectedUser = userSelect.value;
+    loadChat();
+  });
+
+  function loadChat() {
+    if (chatRef) chatRef.off();
     chatBox.innerHTML = '';
-    if(!selectedUser) return;
-    const ref = db.ref(`messages/${currentUser.uid}/${selectedUser}`);
-    chatListener = ref;
-    ref.on('child_added', snap => {
-      const m = snap.val();
+    if (!selectedUser) return;
+
+    const chatPath = `messages/${currentUser.uid}/${selectedUser}`;
+    chatRef = db.ref(chatPath);
+    chatRef.on('child_added', snap => {
+      const msg = snap.val();
       const div = document.createElement('div');
-      div.className = m.from === currentUser.uid ? 'msg from-me' : 'msg from-other';
-      div.textContent = m.text;
+      div.className = 'msg ' + (msg.from === currentUser.uid ? 'from-me' : 'from-other');
+      div.textContent = msg.text;
       chatBox.appendChild(div);
       chatBox.scrollTop = chatBox.scrollHeight;
-      // Show top on-screen notification only for messages from other user
-      if(m.from !== currentUser.uid) {
-        // Show notification with sender email + text
-        const senderEmail = userSelect.options[userSelect.selectedIndex]?.text || 'Someone';
-        showNewMessageNotification(`New message from ${senderEmail}: ${m.text}`);
+
+      // Show notification only for messages from others
+      if (msg.from !== currentUser.uid) {
+        const senderEmail = userSelect.options[userSelect.selectedIndex]?.text || 'User';
+        showNotification(`New message from ${senderEmail}: ${msg.text}`);
       }
     });
   }
 
   function sendMessage() {
-    if(!selectedUser) {
-      alert('Select user to chat with');
-      return;
-    }
     const text = msgInput.value.trim();
-    if(!text) return;
-    const msgObj = {
+    if (!text || !selectedUser) return;
+    const message = {
       from: currentUser.uid,
       to: selectedUser,
       text,
       timestamp: Date.now()
     };
-    const userMsgRef = db.ref(`messages/${currentUser.uid}/${selectedUser}`).push();
-    userMsgRef.set(msgObj);
-    db.ref(`messages/${selectedUser}/${currentUser.uid}/${userMsgRef.key}`).set(msgObj);
+    const newMsgKey = db.ref().push().key;
+    const updates = {};
+    updates[`messages/${currentUser.uid}/${selectedUser}/${newMsgKey}`] = message;
+    updates[`messages/${selectedUser}/${currentUser.uid}/${newMsgKey}`] = message;
+    db.ref().update(updates);
     msgInput.value = '';
   }
-
-  signupBtn.onclick = () => {
-    loginMsg.textContent = '';
-    const email = emailInput.value.trim();
-    const password = passwordInput.value;
-    if(!email || !password) {
-      loginMsg.textContent = 'Enter email & password';
-      return;
-    }
-    saveUser(email, password)
-      .then(() => {
-        alert('Signup successful! You can now log in.');
-      })
-      .catch(err => {
-        loginMsg.textContent = err;
-      });
-  };
-
-  loginBtn.onclick = () => {
-    loginMsg.textContent = '';
-    const email = emailInput.value.trim();
-    const password = passwordInput.value;
-    if(!email || !password) {
-      loginMsg.textContent = 'Enter email & password';
-      return;
-    }
-    checkLogin(email, password)
-      .then(user => {
-        currentUser = user;
-        currentUserEmailSpan.textContent = user.email;
-        showChat();
-        loadUsers();
-      })
-      .catch(err => {
-        loginMsg.textContent = err;
-      });
-  };
-
-  logoutBtn.onclick = () => {
-    currentUser = null;
-    selectedUser = null;
-    userSelect.value = '';
-    chatBox.innerHTML = '';
-    showLogin();
-  };
-
-  userSelect.onchange = () => {
-    selectedUser = userSelect.value;
-    listenMessages();
-  };
-
-  sendBtn.onclick = sendMessage;
-
-  function showNewMessageNotification(text) {
-    newMessageNotification.textContent = text;
-    newMessageNotification.style.display = 'block';
-    clearTimeout(newMessageNotification.hideTimeout);
-    newMessageNotification.hideTimeout = setTimeout(() => {
-      newMessageNotification.style.display = 'none';
-    }, 4000);
-  }
-
-  showLogin();
 </script>
 
 </body>
