--- a/index.html
+++ b/index.html
@@ -2,20 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Chat App with Top Notification</title>
+  <title>Chat with Top Notification</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 500px;
-      margin: 2em auto;
-      background: #f4f4f4;
+      max-width: 480px;
+      margin: auto;
+      background: #f5f5f5;
       padding: 1em;
     }
-
-    h2 {
-      text-align: center;
-    }
-
     input, select, button {
       width: 100%;
       margin: 0.3em 0;
@@ -24,66 +19,43 @@
       border-radius: 5px;
       border: 1px solid #ccc;
     }
-
     button {
       background: #4a76a8;
       color: white;
       font-weight: bold;
-      cursor: pointer;
       border: none;
     }
-
     #chat {
       height: 250px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
       overflow-y: auto;
       padding: 10px;
       background: white;
+      border: 1px solid #ccc;
       margin-top: 1em;
+      border-radius: 5px;
     }
-
     .msg {
-      padding: 5px 10px;
-      margin: 6px 0;
+      margin: 0.5em 0;
+      padding: 0.5em 1em;
       border-radius: 10px;
       max-width: 75%;
     }
-
     .from-me {
       background: #dcf8c6;
-      align-self: flex-end;
-      text-align: right;
       margin-left: auto;
+      text-align: right;
     }
-
     .from-other {
       background: #fff;
-      align-self: flex-start;
-      text-align: left;
+      border: 1px solid #ddd;
       margin-right: auto;
-      border: 1px solid #eee;
+      text-align: left;
     }
-
+    #loginDiv, #chatDiv {
+      margin-top: 1em;
+    }
     #chatDiv {
       display: none;
-    }
-
-    #notification {
-      position: fixed;
-      top: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #4a76a8;
-      color: white;
-      padding: 12px 20px;
-      border-radius: 25px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      display: none;
-      z-index: 9999;
-      font-size: 1rem;
-      text-align: center;
-      max-width: 90%;
     }
   </style>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
@@ -91,17 +63,14 @@
 </head>
 <body>
 
-<h2>Simple Chat</h2>
-
-<div id="notification"></div>
+<h2>Chat App</h2>
 
 <div id="loginDiv">
-  <h3>Login / Sign Up</h3>
-  <input id="emailInput" placeholder="Email" type="email">
-  <input id="passwordInput" placeholder="Password" type="password">
+  <input id="emailInput" type="email" placeholder="Email">
+  <input id="passwordInput" type="password" placeholder="Password">
   <button onclick="signup()">Sign Up</button>
-  <button onclick="login()">Log In</button>
-  <div id="loginMsg" style="color:red; min-height: 1.2em;"></div>
+  <button onclick="login()">Login</button>
+  <div id="loginMsg" style="color:red;min-height:1.5em;"></div>
 </div>
 
 <div id="chatDiv">
@@ -113,12 +82,11 @@
     <option value="">Select a user</option>
   </select>
   <div id="chat"></div>
-  <input id="msgInput" placeholder="Type a message...">
+  <input id="msgInput" placeholder="Type your message...">
   <button onclick="sendMessage()">Send</button>
 </div>
 
 <script>
-  // Firebase config
   const firebaseConfig = {
     databaseURL: "https://fb-acc-d2f14-default-rtdb.asia-southeast1.firebasedatabase.app"
   };
@@ -132,20 +100,10 @@
   const emailInput = document.getElementById('emailInput');
   const passwordInput = document.getElementById('passwordInput');
   const loginMsg = document.getElementById('loginMsg');
-  const userSelect = document.getElementById('userSelect');
   const currentUserEmail = document.getElementById('currentUserEmail');
+  const userSelect = document.getElementById('userSelect');
   const chatBox = document.getElementById('chat');
   const msgInput = document.getElementById('msgInput');
-  const notification = document.getElementById('notification');
-
-  function showNotification(message) {
-    notification.textContent = message;
-    notification.style.display = 'block';
-    clearTimeout(notification.timer);
-    notification.timer = setTimeout(() => {
-      notification.style.display = 'none';
-    }, 4000);
-  }
 
   function uid(email) {
     return btoa(email).replace(/=/g, '');
@@ -155,16 +113,16 @@
     const email = emailInput.value.trim();
     const password = passwordInput.value.trim();
     if (!email || !password) {
-      loginMsg.textContent = "Please fill in both fields.";
+      loginMsg.textContent = "Email and password required.";
       return;
     }
     const userId = uid(email);
-    db.ref('users/' + userId).once('value').then(snapshot => {
+    db.ref("users/" + userId).once('value').then(snapshot => {
       if (snapshot.exists()) {
-        loginMsg.textContent = "User already exists. Try logging in.";
+        loginMsg.textContent = "User already exists.";
       } else {
-        db.ref('users/' + userId).set({ email, password });
-        loginMsg.textContent = "Account created. Now log in.";
+        db.ref("users/" + userId).set({ email, password });
+        loginMsg.textContent = "Signed up! Please log in.";
       }
     });
   }
@@ -173,18 +131,19 @@
     const email = emailInput.value.trim();
     const password = passwordInput.value.trim();
     const userId = uid(email);
-    db.ref('users/' + userId).once('value').then(snapshot => {
+    db.ref("users/" + userId).once('value').then(snapshot => {
       const user = snapshot.val();
       if (!user) {
         loginMsg.textContent = "User not found.";
       } else if (user.password !== password) {
-        loginMsg.textContent = "Incorrect password.";
+        loginMsg.textContent = "Wrong password.";
       } else {
         currentUser = { uid: userId, email };
         currentUserEmail.textContent = email;
-        document.getElementById('loginDiv').style.display = 'none';
-        document.getElementById('chatDiv').style.display = 'block';
+        document.getElementById("loginDiv").style.display = "none";
+        document.getElementById("chatDiv").style.display = "block";
         loadUsers();
+        requestNotificationPermission(); // ask for notif permission
       }
     });
   }
@@ -192,18 +151,18 @@
   function logout() {
     currentUser = null;
     selectedUser = null;
-    chatBox.innerHTML = '';
-    document.getElementById('loginDiv').style.display = 'block';
-    document.getElementById('chatDiv').style.display = 'none';
     if (chatRef) chatRef.off();
+    chatBox.innerHTML = '';
+    document.getElementById("loginDiv").style.display = "block";
+    document.getElementById("chatDiv").style.display = "none";
   }
 
   function loadUsers() {
     userSelect.innerHTML = '<option value="">Select a user</option>';
-    db.ref('users').once('value').then(snapshot => {
+    db.ref("users").once('value').then(snapshot => {
       snapshot.forEach(child => {
         if (child.key !== currentUser.uid) {
-          const opt = document.createElement('option');
+          const opt = document.createElement("option");
           opt.value = child.key;
           opt.textContent = child.val().email;
           userSelect.appendChild(opt);
@@ -212,7 +171,7 @@
     });
   }
 
-  userSelect.addEventListener('change', () => {
+  userSelect.addEventListener("change", () => {
     selectedUser = userSelect.value;
     loadChat();
   });
@@ -221,21 +180,22 @@
     if (chatRef) chatRef.off();
     chatBox.innerHTML = '';
     if (!selectedUser) return;
-
-    const chatPath = `messages/${currentUser.uid}/${selectedUser}`;
-    chatRef = db.ref(chatPath);
+    const path = `messages/${currentUser.uid}/${selectedUser}`;
+    chatRef = db.ref(path);
     chatRef.on('child_added', snap => {
       const msg = snap.val();
-      const div = document.createElement('div');
-      div.className = 'msg ' + (msg.from === currentUser.uid ? 'from-me' : 'from-other');
+      const div = document.createElement("div");
+      div.className = "msg " + (msg.from === currentUser.uid ? "from-me" : "from-other");
       div.textContent = msg.text;
       chatBox.appendChild(div);
       chatBox.scrollTop = chatBox.scrollHeight;
 
-      // Show notification only for messages from others
-      if (msg.from !== currentUser.uid) {
-        const senderEmail = userSelect.options[userSelect.selectedIndex]?.text || 'User';
-        showNotification(`New message from ${senderEmail}: ${msg.text}`);
+      // show browser notification
+      if (msg.from !== currentUser.uid && Notification.permission === "granted") {
+        const senderEmail = userSelect.options[userSelect.selectedIndex]?.text || "User";
+        new Notification(`New message from ${senderEmail}`, {
+          body: msg.text,
+        });
       }
     });
   }
@@ -243,18 +203,28 @@
   function sendMessage() {
     const text = msgInput.value.trim();
     if (!text || !selectedUser) return;
-    const message = {
+    const msgObj = {
       from: currentUser.uid,
       to: selectedUser,
       text,
       timestamp: Date.now()
     };
-    const newMsgKey = db.ref().push().key;
+    const newKey = db.ref().push().key;
     const updates = {};
-    updates[`messages/${currentUser.uid}/${selectedUser}/${newMsgKey}`] = message;
-    updates[`messages/${selectedUser}/${currentUser.uid}/${newMsgKey}`] = message;
+    updates[`messages/${currentUser.uid}/${selectedUser}/${newKey}`] = msgObj;
+    updates[`messages/${selectedUser}/${currentUser.uid}/${newKey}`] = msgObj;
     db.ref().update(updates);
     msgInput.value = '';
+  }
+
+  function requestNotificationPermission() {
+    if ('Notification' in window && Notification.permission !== 'granted') {
+      Notification.requestPermission().then(permission => {
+        if (permission !== 'granted') {
+          alert("Notifications are disabled. You won't see popups for new messages.");
+        }
+      });
+    }
   }
 </script>
 
