--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div id="topLeftButtons">
       <button id="viewParticipantsBtn" class="submit-btn">📋 View Records</button>
       <button id="deleteRecordBtn" class="submit-btn" style="background-color:#e04e4e;">🗑️ Delete Record</button>
-      <button onclick="generatePDF()" class="submit-btn">📄 Generate PDF</button>
+      <button onclick="generatePDF()" class="submit-btn">📄 Generate PDF</button> </br> </br> </br>
     </div>
 
     <h2>Candidate Registration Form</h2>
