--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8" /> </br></br></br>
   <title>Candidate Registration</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
