--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
       <button id="deleteRecordBtn" class="submit-btn" style="background-color:#e04e4e;">🗑️ Delete Record</button>
       <button onclick="generatePDF()" class="submit-btn">📄 Generate PDF</button> </br> </br> </br>
     </div>
-
-    <h2>Candidate Registration Form</h2>
+</br> </br>
+    <h2>Candidate Registration Form </br>  USE ALL CAPS </h2>
     <form id="candidateForm">
       <label>Full Name:</label><input type="text" id="fullName" required>
       <label>Age:</label><input type="number" id="age" required>
