--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
         <tbody id="gradesBody"></tbody>
       </table>
 
-      <label>Photo:</label><input type="file" id="photo" accept="image/*">
-      <label>Signature:</label><input type="file" id="signature" accept="image/*">
+      <label>skip this </label><input type="file" id="photo" accept="image/*">
+      <label>skip this </label><input type="file" id="signature" accept="image/*">
 
       <button type="submit" class="submit-btn">Submit</button>
     </form>
